Fixed button issues

--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
                 <div id="dialogue"><h3 class="speaker">Laverne</h3>
                 <p class="dialogue">Varmint' got itself intah mah curn! Is this yer varmint?</p></div>
             </div>
-            <div class="row buttons">
-            <button id="yes" class="answer">Yes</button><button id="no" class="answer">That's not my horse.</button><button id="refresh" class="answer hidden">Is that all Laverne?</button>
-            <button id="endButton" class="hidden endBtn">Fine Laverne. Whatever.</button></div>
+            <div id="gameBtns" class="row buttons">
+                <button id="yes" class="answer">Yes</button><button id="no" class="answer">That's not my horse.</button><button id="refresh" class="answer hidden">Is that all Laverne?</button></div>
+            <div id="endGameBtn" class="row buttons hidden">
+            <button id="endButton" class="endBtn">Fine Laverne. Whatever.</button></div>
         </div>
         </div>
         <div class="endGame hidden">
